[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://images/sprites/EnemyIdle/Idle 01.png" type="Texture" id=2]
[ext_resource path="res://images/sprites/EnemyIdle/Idle 02.png" type="Texture" id=3]
[ext_resource path="res://images/sprites/EnemyIdle/Idle 04.png" type="Texture" id=4]
[ext_resource path="res://images/sprites/EnemyIdle/Idle 05.png" type="Texture" id=5]
[ext_resource path="res://images/sprites/EnemyIdle/Idle 03.png" type="Texture" id=6]
[ext_resource path="res://images/sprites/EnemyRun/Run 01.png" type="Texture" id=7]
[ext_resource path="res://images/sprites/EnemyRun/Run 04.png" type="Texture" id=8]
[ext_resource path="res://images/sprites/EnemyRun/Run 05.png" type="Texture" id=9]
[ext_resource path="res://images/sprites/EnemyIdle/Idle 08.png" type="Texture" id=10]
[ext_resource path="res://images/sprites/EnemyRun/Run 06.png" type="Texture" id=11]
[ext_resource path="res://images/sprites/EnemyRun/Run 03.png" type="Texture" id=12]
[ext_resource path="res://images/sprites/EnemyIdle/Idle 06.png" type="Texture" id=13]
[ext_resource path="res://images/sprites/EnemyRun/Run 02.png" type="Texture" id=14]
[ext_resource path="res://images/sprites/EnemyIdle/Idle 07.png" type="Texture" id=15]
[ext_resource path="res://actors/EnemyHurtbox.tscn" type="PackedScene" id=16]
[ext_resource path="res://actors/EnemyDetection.tscn" type="PackedScene" id=17]
[ext_resource path="res://actors/EnemyHitbox.tscn" type="PackedScene" id=18]
[ext_resource path="res://images/sprites/08-Hit/Hit 01.png" type="Texture" id=19]
[ext_resource path="res://images/sprites/08-Hit/Hit 02.png" type="Texture" id=20]
[ext_resource path="res://images/sprites/08-Hit/Hit 03.png" type="Texture" id=21]
[ext_resource path="res://images/sprites/08-Hit/Hit 04.png" type="Texture" id=22]
[ext_resource path="res://music/Hit.wav" type="AudioStream" id=23]
[ext_resource path="res://images/sprites/EnemyAttack/Attack 02.png" type="Texture" id=24]
[ext_resource path="res://images/sprites/EnemyAttack/Attack 01.png" type="Texture" id=25]
[ext_resource path="res://images/sprites/EnemyAttack/Attack 04.png" type="Texture" id=26]
[ext_resource path="res://images/sprites/EnemyAttack/Attack 05.png" type="Texture" id=27]
[ext_resource path="res://images/sprites/EnemyAttack/Attack 03.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "hit",
"speed": 8.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 16 )]

[node name="EnemyDetection" parent="." instance=ExtResource( 17 )]

[node name="EnemyHitbox" parent="." instance=ExtResource( 18 )]
collision_layer = 64
collision_mask = 512

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
bus = "SFX"

[node name="AttackCooldwn" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_area_entered"]
[connection signal="body_entered" from="EnemyDetection" to="." method="_on_EnemyDetection_body_entered"]
[connection signal="body_exited" from="EnemyDetection" to="." method="_on_EnemyDetection_body_exited"]
[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_EnemyHitbox_area_entered"]
[connection signal="timeout" from="AttackCooldwn" to="." method="_on_AttackCooldwn_timeout"]
